updated links, calendar, and page titles.

--- a/calendar/index.html
+++ b/calendar/index.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="utf-8">
 
-    <title>CS8 Calendar</title>
+    <title>CS9 Calendar</title>
 
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/index.css">
@@ -79,7 +79,7 @@
                 <div class="jumbotron jumbotron-fluid portal">
                     <div class="container">
                         <p>Please excuse the ugliness while we compose our ideas!</p>
-                        <iframe src="https://calendar.google.com/calendar/b/1/embed?showTitle=0&amp;showNav=0&amp;showDate=0&amp;showPrint=0&amp;showTabs=0&amp;showCalendars=0&amp;mode=WEEK&amp;height=600&amp;wkst=1&amp;bgcolor=%23993399&amp;src=lambdaschool.com_cc32lrjbg6qcov2b41eepk0dpc%40group.calendar.google.com&amp;color=%2323164E&amp;ctz=America%2FLos_Angeles" style="border-width:0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
+                        <iframe src="https://calendar.google.com/calendar/embed?src=lambdaschool.com_ho39v1dndfc15iq5g9q39ffseg%40group.calendar.google.com&ctz=America%2FNew_York" style="border: 0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
                     </div>
                 </div>
             </div>
