--- a/index.html
+++ b/index.html
@@ -79,19 +79,19 @@
           <!-- <a href="../calendar/index.html" target="_blank">
               <img src="img/calendar.png" alt="google calendar logo" class="rounded-circle img-fluid">
             </a> -->
-          <a href="http://ls-training-kit.netlify.com/cs-master" target="_blank">
+          <a href="https://learn.lambdaschool.com/" target="_blank">
             <img src="img/lambda.png" alt="Lambda Logo" class="rounded-circle img-fluid">
           </a>
           <a href="https://github.com/LambdaSchool" target="_blank">
             <img src="img/github.png" alt="github logo" class="rounded-circle img-fluid">
           </a>
-          <a href="https://repl.it/student/classrooms/44637" target="_blank">
+          <a href="https://repl.it/student" target="_blank">
             <img src="img/replit.png" alt="replit logo" class="rounded-circle img-fluid">
           </a>
           <a href="https://lambdaschoolstudents.slack.com" target="_blank">
             <img src="img/slack.png" alt="slack logo" class="rounded-circle img-fluid">
           </a>
-          <a href="https://piazza.com/class/jd9u0bytrpu4dv" target="_blank">
+          <a href="https://piazza.com/class" target="_blank">
             <img src="img/piazza.png" alt="piazza logo" class="rounded-circle img-fluid">
           </a>
           <a href="https://trello.com/" target="_blank">
