change log class of jsAnimate are on the each icon [will be removed shortly], add a link to colabs to the nav bar

--- a/index.html
+++ b/index.html
@@ -63,6 +63,9 @@
           <li class="nav-item">
             <a class="nav-link" href="../dreamnexus/calendar/index.html">Calendar</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="./colabs/index.html">Colabs</a>
+          </li>
         </ul>
       </div>
     </div>
@@ -79,47 +82,47 @@
           <!-- <a href="../calendar/index.html" target="_blank">
               <img src="img/calendar.png" alt="google calendar logo" class="rounded-circle img-fluid">
             </a> -->
-          <a href="https://learn.lambdaschool.com/" target="_blank">
-            <img src="img/lambda.png" alt="Lambda Logo" class="rounded-circle img-fluid">
+          <a href="http://ls-training-kit.netlify.com/cs-master" target="_blank">
+            <img src="img/lambda.png" alt="Lambda Logo" class="jsAnimate rounded-circle img-fluid">
           </a>
           <a href="https://github.com/LambdaSchool" target="_blank">
-            <img src="img/github.png" alt="github logo" class="rounded-circle img-fluid">
+            <img src="img/github.png" alt="github logo" class="jsAnimate rounded-circle img-fluid">
           </a>
-          <a href="https://repl.it/student" target="_blank">
-            <img src="img/replit.png" alt="replit logo" class="rounded-circle img-fluid">
+          <a href="https://repl.it/student/classrooms/44637" target="_blank">
+            <img src="img/replit.png" alt="replit logo" class="jsAnimate rounded-circle img-fluid">
           </a>
           <a href="https://lambdaschoolstudents.slack.com" target="_blank">
-            <img src="img/slack.png" alt="slack logo" class="rounded-circle img-fluid">
+            <img src="img/slack.png" alt="slack logo" class="jsAnimate rounded-circle img-fluid">
           </a>
-          <a href="https://piazza.com/class" target="_blank">
-            <img src="img/piazza.png" alt="piazza logo" class="rounded-circle img-fluid">
+          <a href="https://piazza.com/class/jd9u0bytrpu4dv" target="_blank">
+            <img src="img/piazza.png" alt="piazza logo" class="jsAnimate rounded-circle img-fluid">
           </a>
           <a href="https://trello.com/" target="_blank">
-            <img src="img/trello.png" alt="trello logo" class="rounded-circle img-fluid">
+            <img src="img/trello.png" alt="trello logo" class="jsAnimate rounded-circle img-fluid">
           </a>
           <a href="https://appear.in" target="_blank">
-            <img src="img/appearin.png" alt="appearin logo" class="rounded-circle img-fluid">
+            <img src="img/appearin.png" alt="appearin logo" class="jsAnimate rounded-circle img-fluid">
           </a>
           <a href="https://developer.mozilla.org/en-US/" target="_blank">
-            <img src="img/mdn.png" alt="mdn logo" class="rounded-circle img-fluid">
+            <img src="img/mdn.png" alt="mdn logo" class="jsAnimate rounded-circle img-fluid">
           </a>
           <a href="https://codesandbox.io/s/" target="_blank">
-            <img src="img/codesandbox.png" alt="codesandbox logo" class="rounded-circle img-fluid">
+            <img src="img/codesandbox.png" alt="codesandbox logo" class="jsAnimate rounded-circle img-fluid">
           </a>
           <a href="https://codepen.io/pen/" target="_blank">
-            <img src="img/codepen.png" alt="codepen logo" class="rounded-circle img-fluid">
+            <img src="img/codepen.png" alt="codepen logo" class="jsAnimate rounded-circle img-fluid">
           </a>
           <a href="http://jsbin.com/?html,js,output" target="_blank">
-            <img src="img/jsbin.png" alt="js logo" class="rounded-circle img-fluid">
+            <img src="img/jsbin.png" alt="js logo" class="jsAnimate rounded-circle img-fluid">
           </a>
           <a href="http://www.pythontutor.com/visualize.html#mode=edit" target="_blank">
-            <img src="img/pythontutor.png" alt="python tutor logo" class="rounded-circle img-fluid">
+            <img src="img/pythontutor.png" alt="python tutor logo" class="jsAnimate rounded-circle img-fluid">
           </a>
           <a href="https://getbootstrap.com/docs/4.0/getting-started/introduction/" target="_blank">
-            <img src="img/bootstrap.png" alt="bootstrap tutor logo" class="rounded-circle img-fluid">
+            <img src="img/bootstrap.png" alt="bootstrap tutor logo" class="jsAnimate rounded-circle img-fluid">
           </a>
           <a href="https://goo.gl/forms/iC8RWuOGwuo2BUm92" target="_blank">
-            <img src="img/request.png" alt="request new link" class="rounded-circle img-fluid">
+            <img src="img/request.png" alt="request new link" class="jsAnimate rounded-circle img-fluid">
           </a>
         </div>
       </div>
@@ -144,6 +147,7 @@
   <script src="js/jquery-3.3.1.min.js"></script>
   <script src="js/bootstrap.bundle.min.js"></script>
   <script src="js/index.js"></script>
+  <script src="js/btnAnimations/index.js" async></script>
 </body>
 
 </html>
